// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parses empty ineligible offenses array 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "usPaNoHighSanctionsInPastYear": {},
    "usPaNotServingIneligibleOffenseForAdminSupervision": {
      "ineligibleOffenses": [],
      "ineligibleSentencesExpirationDate": [],
    },
  },
  "externalId": "abc123",
  "formInformation": {
    "drugConviction": true,
    "drugUnreportedDisposition": true,
    "statute14": false,
    "statute30": true,
    "statute37": false,
  },
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_PA",
}
`;

exports[`parses null reason fields 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "usPaNoHighSanctionsInPastYear": null,
    "usPaNotServingIneligibleOffenseForAdminSupervision": null,
  },
  "externalId": "abc123",
  "formInformation": {
    "drugConviction": true,
    "drugUnreportedDisposition": true,
    "statute14": false,
    "statute30": true,
    "statute37": false,
  },
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_PA",
}
`;

exports[`record parses as expected 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "usPaNoHighSanctionsInPastYear": {},
    "usPaNotServingIneligibleOffenseForAdminSupervision": {
      "ineligibleOffenses": [
        "ABC",
        "DEF",
      ],
      "ineligibleSentencesExpirationDate": [
        2023-06-01T00:00:00.000Z,
        2022-01-01T00:00:00.000Z,
      ],
    },
  },
  "externalId": "abc123",
  "formInformation": {
    "drugConviction": true,
    "drugUnreportedDisposition": true,
    "statute14": false,
    "statute30": true,
    "statute37": false,
  },
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_PA",
}
`;
